--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,7 @@ body {
    border-style: solid;
    border-width: 1px;
    border-radius: 10px;   
+   height: 350px;
 }
 
 @media screen and (min-width: 768px) {
