--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,8 @@ body {
 
 .title-container {
    text-align: center;
+   border-bottom: 1px dashed;
+   margin: 0px 10px 0px 10px;
 }
 
 .dashboard-container {
@@ -26,7 +28,7 @@ body {
    margin: 10px;
    border-style: solid;
    border-width: 1px;
-   border-radius: 10px;   
+   border-radius: 10px;
    height: 350px;
 }
 
